tests/codegen/fail/union/trait_wrong_method_return_type.stderr
error: GraphQL union expects trait method return type to be `Option<&VariantType>` only
       · note: https://spec.graphql.org/October2021#sec-Unions

 --> fail/union/trait_wrong_method_return_type.rs:5:20
  |
5 |     fn a(&self) -> &Human;
  |                    ^
